--- a/YassineSaddikiApp/YassineSaddikiApp.csproj
+++ b/YassineSaddikiApp/YassineSaddikiApp.csproj
@@ -81,6 +81,9 @@
 	  <MauiXaml Update="FourthPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="GifPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="HomePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
