--- a/YassineSaddikiApp/YassineSaddikiApp.csproj
+++ b/YassineSaddikiApp/YassineSaddikiApp.csproj
@@ -73,9 +73,6 @@
 	  <Compile Update="SecondPage.xaml.cs">
 	    <DependentUpon>%(Filename)</DependentUpon>
 	  </Compile>
-	  <Compile Update="ThirdPage.xaml.cs">
-	    <DependentUpon>%(Filename)</DependentUpon>
-	  </Compile>
 	</ItemGroup>
 
 	<ItemGroup>
@@ -97,14 +94,11 @@
 	  <MauiXaml Update="SecondPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="ThirdPage.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Models\ViewModels\" />
 	  <Folder Include="Pages\" />
+	  <Folder Include="ViewModels\" />
 	</ItemGroup>
 
 </Project>
